//
//  Accessibility.swift
//  Eat
//
//  Created by Milton Leung on 2018-06-26.
//  Copyright © 2018 launchpad. All rights reserved.
//

import Foundation

struct Accessibility {
  static let onboarding = "onboardingView"
  static let onboardingButton = "onboardingButton"

  static let mapView = "mapView"
  static let mapUserLocation = "userLocation"
  static let mapNext = "mapNext"

  static let increaseButton = "increaseButton"
  static let decreaseButton = "decreaseButton"
  static let countNext = "countNext"
  static let countLabel = "countLabel"

  static let mealTimeTextField = "mealTimeText"
  static let mealTimeDatePicker = "mealTimeDatePicker"
  static let mealTimeToolbar = "mealTimeToolbar"
  static let mealTimeToolbarDone = "mealTimeToolbarDone"
  static let mealTimeToolbarNow = "mealTimeToolbarNow"
  static let mealTimeNext = "mealTimeToolbarNext"

  static let ratingSlider = "ratingSlider"
  static let ratingMinimumRating = "ratingMinimumRating"
  static let ratingOnePriceButton = "ratingOnePriceButton"
  static let ratingTwoPriceButton = "ratingTwoPriceButton"
  static let ratingThreePriceButton = "ratingThreePriceButton"
  static let ratingPriceNext = "ratingPriceNext"

  static let preferenceTextField = "preferenceTextField"
  static let preferenceFinish = "preferenceFinish"

  static let restaurantCard = "restaurantCard"
  static let restaurantCardClose = "restaurantCardClose"
  static let keepButton = "keepButton"
  static let skipButton = "skipButton"

  static let restaurantCardName = "restaurantCardName"
  static let restaurantCardDistance = "restaurantCardDistance"
  static let restaurantCardReview = "restaurantCardReview"
  static let restaurantCardType = "restaurantCardType"
  static let restaurantCardOpen = "restaurantCardOpen"

  static let restaurantInfoName = "restaurantInfoName"
  static let restaurantInfoDistance = "restaurantInfoDistance"
  static let restaurantInfoReview = "restaurantInfoReview"
  static let restaurantInfoType = "restaurantInfoType"
  static let restaurantInfoOpen = "restaurantInfoOpen"
  static let restaurantInfoAddress = "restaurantInfoAddress"
  static let restaurantInfoMenu = "restaurantInfoMenu"
  static let restaurantInfoClose = "restaurantInfoClose"

  static let chosenRestaurantHeader = "chosenRestaurantHeader"
  static let restaurantExploreMenu = "restaurantExploreMenu"
}
