...
}

final class MealTimeViewModelImpl {
  let restaurantHoursHeader = "The restaurant should be open ".localize()
  let headerTitle = "When do you want to eat?".localize()
  let restaurantOpen = "now".localize()
  let doneToolbarTitle = "Done".localize()
  let nowToolbarTitle = "Now".localize()
  let nextButtonTitle = "Next".localize()
  let backButtonTitle = "Back".localize()

  fileprivate let searchQuery: SearchQuery

...
